--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,11 @@
     <link rel="stylesheet" href="output.css">
     <script src="https://kit.fontawesome.com/b052718160.js" crossorigin="anonymous"></script>
     <style>
-        @media (max-width:600px) and (min-width:320px) {
-            .content {
-                width: 100%;
-            }
-
-            .buttons {
-                grid-template-columns: repeat(4, 1fr);
-            }
+        .content {
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
