--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             class="bg-black flex flex-col items-center w-[260px] pb-2 mx-auto mt-[100px] rounded-[20px] pt-[15px] content">
             <div>
                 <input type="text" id="display"
-                    class="w-[230px] h-10 text-[40px] mb-2 text-right text-white font-semibold bg-transparent p-2 placeholder-white"
+                    class="w-[230px] h-10 text-[40px] mb-2 text-right text-white font-semibold bg-transparent p-2 placeholder-white  overflow-wrap break-word"
                     placeholder="0" disabled>
             </div>
 
