Changes to be committed: 	modified:   src/index.html

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 <button class="font-semibold text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
                     onclick="clearDisplay()">AC</button>
                 <button class="font-semibold text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
-                    onclick="clearDisplay()">%</button>
+                    onclick="appendChar('%')">%</button>
                 <button class="font-semibold text-lg w-12 h-12 bg-[#a8a8a8] rounded-full" onclick="deleteChar()"><i
                         class="fa-solid fa-delete-left"></i>
                 </button>
