--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
 
     <div class="container">
         <div
-            class="bg-black flex flex-col items-center w-[260px] pb-2 mx-auto mt-[100px] rounded-[20px] pt-[15px] content">
+            class="bg-black flex flex-col items-center w-[260px] pb-4 mx-auto mt-[100px] rounded-[20px] pt-[15px] content">
             <div>
                 <input type="text" id="display"
-                    class="w-[230px] h-10 text-[40px] mb-2 text-right text-white bg-transparent p-2 placeholder-white  overflow-wrap break-word"
+                    class="w-[230px] h-10 text-[40px] mb-2 text-right text-white bg-transparent p-2 placeholder-white pr-[12px] overflow-wrap break-word"
                     placeholder="0" disabled>
             </div>
 
@@ -70,6 +70,13 @@
                 <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="calculate()">=</button>
             </div>
+        </div>
+
+        <div class="text-center absolute bottom-5 left-[39%]">
+            <p class="text-xs mt-4 text-black">&copy; Made with <i class="fa-solid fa-heart text-red-500"></i> by
+                <a href="https:/www.instagram.com/kis__inja" class="underline cursor-pointer"
+                    title="go to my instagram">Kisinja</a>
+            </p>
         </div>
 
         <script src="calc.js"></script>
