--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
         <div class="text-center absolute bottom-5 left-[38%]">
             <p class="text-xs mt-4 text-black">&copy; Made with <i class="fa-solid fa-heart text-red-500"></i> by
-                <a href="https:/www.instagram.com/kis__inja" class="underline cursor-pointer"
+                <a href="https://www.instagram.com/kis__inja/" class="underline cursor-pointer"
                     title="go to my instagram">Kisinja</a>
             </p>
         </div>
