Changes to be committed: 	modified:   src/index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="output.css">
+
+    <!-- FONT AWESOME LINK FOR ICONS -->
     <script src="https://kit.fontawesome.com/b052718160.js" crossorigin="anonymous"></script>
+
+    <!-- Style for centering the Calculator absolutely -->
     <style>
         .content {
             position: absolute;
@@ -15,6 +19,8 @@
             transform: translate(-50%, -50%);
         }
     </style>
+
+
 </head>
 
 <body class="bg-gray-300 font-sans">
