--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             class="bg-black flex flex-col items-center w-[260px] pb-4 mx-auto mt-[100px] rounded-[20px] pt-[15px] content">
             <div>
                 <input type="text" id="display"
-                    class="w-[230px] h-10 text-[40px] mb-2 text-right text-white bg-transparent p-2 placeholder-white pr-[12px] overflow-wrap break-word"
+                    class="w-[230px] h-10 text-[40px] mb-2 text-right text-white bg-transparent p-2 placeholder-white pr-[12px] overflow-wrap"
                     placeholder="0" disabled>
             </div>
 
@@ -76,14 +76,14 @@
                 <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="calculate()">=</button>
             </div>
+            <div class="text-center absolute bottom-[-50px]">
+                <p class="text-xs mt-4 text-black">&copy; Made with <i class="fa-solid fa-heart text-red-500"></i> by
+                    <a href="https://www.instagram.com/kis__inja/" class="underline cursor-pointer"
+                        title="go to my instagram" target="_blank">Kisinja</a>
+                </p>
+            </div>
         </div>
 
-        <div class="text-center absolute bottom-5 left-[38%]">
-            <p class="text-xs mt-4 text-black">&copy; Made with <i class="fa-solid fa-heart text-red-500"></i> by
-                <a href="https://www.instagram.com/kis__inja/" class="underline cursor-pointer"
-                    title="go to my instagram" target="_blank">Kisinja</a>
-            </p>
-        </div>
 
         <script src="calc.js"></script>
 </body>
