--- a/src/index.html
+++ b/src/index.html
@@ -35,45 +35,44 @@
             </div>
 
             <div class="grid grid-cols-4 gap-2 buttons">
-                <button class="font-semibold text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
+                <button class="font-light text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
                     onclick="clearDisplay()">AC</button>
-                <button class="font-semibold text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
+                <button class="font-light text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
                     onclick="appendChar('%')">%</button>
-                <button class="font-semibold text-lg w-12 h-12 bg-[#a8a8a8] rounded-full" onclick="deleteChar()"><i
+                <button class="font-light text-lg w-12 h-12 bg-[#a8a8a8] rounded-full" onclick="deleteChar()"><i
                         class="fa-solid fa-delete-left"></i>
                 </button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="appendChar('/')">&divide;</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('7')">7</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('8')">8</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('9')">9</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="appendChar('*')">&times;</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('4')">4</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('5')">5</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('6')">6</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="appendChar('-')">-</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('1')">1</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('2')">2</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('3')">3</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="appendChar('+')">+</button>
-                <button
-                    class="font-semibold text-white text-lg rounded-full text-left pl-5 h-12 bg-[#393939] col-span-2"
+                <button class="font-light text-white text-lg rounded-full text-left pl-5 h-12 bg-[#393939] col-span-2"
                     onclick="appendChar('0')">0</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#393939]"
                     onclick="appendChar('.')">.</button>
-                <button class="font-semibold text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
+                <button class="font-light text-white text-lg rounded-full w-12 h-12 bg-[#ffa212]"
                     onclick="calculate()">=</button>
             </div>
             <div class="text-center absolute bottom-[-50px]">
