--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                     placeholder="0" disabled>
             </div>
 
-            <div class="grid grid-cols-4 gap-2 buttons">
+            <div class="grid grid-cols-4 gap-2 min-h-screen place-items-center">
                 <button class="font-light text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
                     onclick="clearDisplay()">AC</button>
                 <button class="font-light text-lg w-12 h-12 bg-[#a8a8a8] rounded-full"
