--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+9<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -77,7 +77,7 @@
             </div>
             <div class="text-center absolute bottom-[-50px]">
                 <p class="text-xs mt-4 text-black">&copy; Made with <i class="fa-solid fa-heart text-red-500"></i> by
-                    <a href="https://www.instagram.com/kis__inja/" class="underline cursor-pointer"
+                    <a href="https://www.instagram.com/kis__inja/" class="underline"
                         title="go to my instagram" target="_blank">Kisinja</a>
                 </p>
             </div>
